test/expected/large/fonts/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: fonts
    foo.com/duversion: 1.8.79-20190925.1569389381676
    foo.com/version: 1.8.79
  labels:
    app.kubernetes.io/name: fonts
    helm.sh/chart: fonts-1.8.79
  name: fonts
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fonts
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fonts
        app.kubernetes.io/name: fonts
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-fonts:1.8.79-20190925.1569389381676
        imagePullPolicy: IfNotPresent
        name: fonts
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      initContainers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        image: docker.foo.com/yesbut/init-blocker:1.7
        name: init-blocker
